Upgrade Bouncy Castle from 1.64 to 1.68

--- a/ide/bcpg/nbproject/project.properties
+++ b/ide/bcpg/nbproject/project.properties
@@ -14,5 +14,7 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-release.external/bcpg-jdk15on-1.64.jar=modules/bcpg.jar
+javac.compilerargs=-Xlint -Xlint:-serial
+javac.source=1.8
+release.external/bcpg-jdk15on-1.68.jar=modules/bcpg.jar
 is.autoload=true
