--- a/ide/bcprov/nbproject/project.properties
+++ b/ide/bcprov/nbproject/project.properties
@@ -14,5 +14,7 @@
 # KIND, either express or implied.  See the License for the
 # specific language governing permissions and limitations
 # under the License.
-release.external/bcprov-jdk15on-1.64.jar=modules/bcprov.jar
+javac.compilerargs=-Xlint -Xlint:-serial
+javac.source=1.8
+release.external/bcprov-jdk15on-1.68.jar=modules/bcprov.jar
 is.autoload=true
